naming fix for developer readability

--- a/src/components/template-textarea/index.module.scss
+++ b/src/components/template-textarea/index.module.scss
@@ -5,7 +5,6 @@
 }
 
 .textContainer {
-  //margin-top: 3rem;
   h2 {
     margin-top: 3rem;
   }
@@ -14,11 +13,11 @@
   }
 }
 
-.opensans {
+.subhead {
   font-family: museo-sans, sans-serif;
   font-weight: 900;
   font-size: 16px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   text-transform: uppercase;
 }
 
